Aggro Memory tuning