@@ -7,4 +7,4 @@ set FORGEJAR=FTBserver-1.12.2-14.23.5.2796-universal.jar
 
 rem can be changed by user
 set MAX_RAM=5G
-set JAVA_PARAMETERS=-XX:+UseParNewGC -XX:+CMSIncrementalPacing -XX:+CMSClassUnloadingEnabled -XX:ParallelGCThreads=5 -XX:MinHeapFreeRatio=5 -XX:MaxHeapFreeRatio=10
+set JAVA_PARAMETERS=-XX:+UseConcMarkSweepGC -XX:+CMSIncrementalMode  -XX:+CMSIncrementalPacing  -XX:NewRatio=16  -XX:SurvivorRatio=6  -XX:+AggressiveOpts  -XX:+UseStringDeduplication  -XX:+ExplicitGCInvokesConcurrent -XX:ParallelGCThreads=10 -Dfml.ignorePatchDiscrepancies=true  -Dfml.ignoreInvalidMinecraftCertificates=true  -XX:+UseFastAccessorMethods  -XX:+UseCompressedOops  -XX:+OptimizeStringConcat -XX:MaxTenuringThreshold=15 -XX:+UseAdaptiveGCBoundary -XX:+UseCodeCacheFlushing -XX:+CMSParallelRemarkEnabled -XX:+UseCMSInitiatingOccupancyOnly -XX:+CMSClassUnloadingEnabled
