@@ -22,5 +22,5 @@ export FORGEJAR="FTBserver-1.12.2-14.23.5.2796-universal.jar"
 ## Copy following lines into settings-local.sh to create local config file which overrides default settings given here
 export JAVACMD="java"
 export MAX_RAM="5G"       # -Xmx
-export JAVA_PARAMETERS="-XX:+UseParNewGC -XX:+CMSIncrementalPacing -XX:+CMSClassUnloadingEnabled -XX:ParallelGCThreads=5 -XX:MinHeapFreeRatio=5 -XX:MaxHeapFreeRatio=10"
+export JAVA_PARAMETERS="-XX:+UseConcMarkSweepGC -XX:+CMSIncrementalMode  -XX:+CMSIncrementalPacing  -XX:NewRatio=16  -XX:SurvivorRatio=6  -XX:+AggressiveOpts  -XX:+UseStringDeduplication  -XX:+ExplicitGCInvokesConcurrent -XX:ParallelGCThreads=10 -Dfml.ignorePatchDiscrepancies=true  -Dfml.ignoreInvalidMinecraftCertificates=true  -XX:+UseFastAccessorMethods  -XX:+UseCompressedOops  -XX:+OptimizeStringConcat -XX:MaxTenuringThreshold=15 -XX:+UseAdaptiveGCBoundary -XX:+UseCodeCacheFlushing -XX:+CMSParallelRemarkEnabled -XX:+UseCMSInitiatingOccupancyOnly -XX:+CMSClassUnloadingEnabled"
 
